--- a/views/registerdr.ejs
+++ b/views/registerdr.ejs
@@ -104,8 +104,9 @@
                 <i class="fas fa-sign-in-alt hvr-icon"></i><b> Doctor Register</b>
               </h5>
               <hr />
-              <div class="card-body">
+              <div class="card-body", style= "color:#0097A7 ;" >
                 <%- include('./partials/messages.ejs'); %>
+
                 <form action="/doctor/Dregister" method="POST">
                   <div class="form-group">
                     <label for="regNumber">Registration Number</label>
