End time correction

--- a/views/availability_set.ejs
+++ b/views/availability_set.ejs
@@ -99,7 +99,7 @@ include('./partials/sideMenuDr.ejs'); %>
                 />
               </div>
               <div class="form-group col-md-6">
-                <label for="endTime">Start Time</label>
+                <label for="endTime">End Time</label>
                 <input
                   type="text"
                   id="endTime"
